# shareable-timeseries-visualization

./: .gitignore  README.md  __init__.py
backend/: .env.example  Dockerfile  README.md  deploy-to-google-cloud-run.sh  deploy.sh  load-test.py  main.py  pyproject.toml  run_locally.sh
client/: README.md  __init__.py  config.example.json  main.py  pyproject.toml  stv_client.py  utils.py
docs/: architecture-part-1.excalidraw  architecture-part-2.excalidraw  architecture-part-3.excalidraw
website/: .env.example  README.md  gatsby-browser.js  gatsby-config.ts  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
website/functions/: README.md  get-database-schema.ts  get-timeseries-data.ts  list-database-tables.ts  list-databases.ts  list-table-columns.ts
website/src/assets/: icons.tsx
website/src/components/: button.tsx  checkbox.tsx  column-filter.tsx  data-selector.tsx  input.tsx  plot-panel.tsx  reload-selector.tsx  select.tsx  sensor-selector.tsx  settings.tsx  time-selector.tsx
website/src/pages/: 404.tsx  index.tsx
website/src/styles/: d3-elements.css  index.css
website/src/utilities/: backend.ts  constants.ts  plot-d3-elements.ts  transform-timeseries.ts  utility-functions.ts
website/src/utilities/d3-elements/: plot-all-elements.ts  plot-circles.ts  plot-labels.ts  plot-lines.ts
